Wed Aug 10 14:29:41 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/bmw.doxygen:

          Removed this file.

Thu Aug  4 19:54:30 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/generate_autobuild_properties.py:

          Updated script to generate a environment variables
          property file.

Wed Aug  3 16:32:52 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS_Runtime_Arch.mwc:

          Fixed errors in configuration.

        * etc/scripts/generate_autobuild_properties.py:

          New script that generates a default Java properties files that
          can be used with the autobuild.

Tue Aug  2 21:37:37 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * tutorials/LargeScale:
        * tutorials/LargeScale/LargeScale.xme:

          Initial version of large scale model.

Mon Aug  1 19:12:27 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          Updated script to work with Python 3.

Mon Aug  1 16:24:43 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          The configuration file is written to the prefix location.

Mon Aug  1 16:17:25 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * etc/scripts/download_sources.py:

          Added support for downloading Boost and Xerces-C.

Mon Aug  1 13:45:38 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/manual.pdf:
        * docs/manual/modeling/quick-ref.tex:

          Updated the description of property elements.

Mon Aug  1 04:47:07 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/manual.pdf:
        * docs/manual/modeling/quick-ref.tex:

          Fixed errors in the explanation.

Mon Aug  1 04:38:26 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/analysis/example.datagraph: