@@ -1,3 +1,10 @@
+Thu Aug 18 20:17:53 UTC 2011  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>
+
+        * cuts/workers/CPU/CPU_Worker_T.h:
+        * cuts/workers/CPU/CPU_Worker_T.cpp:
+
+          Updated to pass the scaling factor as a command line argument.
+
 Wed Aug 10 14:29:41 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * docs/bmw.doxygen:
